--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -11,6 +11,7 @@
   display: flex;
   align-items: center;
   border: 1px solid lightgray;
+  border-radius: 10px;
   box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.6);
   padding: 5px;
   cursor: pointer;
