--- a/src/components/video_search/video_search.module.css
+++ b/src/components/video_search/video_search.module.css
@@ -1,11 +1,38 @@
-.header {
+header {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.navbar {
   background-color: #f5f6fa;
-  width: 1200px;
+  max-width: 3000px;
   margin: auto;
-  padding: 20px;
+  margin-bottom: 20px;
+  padding: 30px;
   display: flex;
   align-items: center;
-  border-radius: 15px;
+  justify-content: space-between;
+}
+
+.hamburger {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+  margin-right: auto;
+  cursor: pointer;
+}
+
+.moveHome {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
 }
 
 .logo {
@@ -14,14 +41,14 @@
   margin-right: 10px;
 }
 
-.header span {
+.navbar span {
   font-size: 2rem;
   font-weight: bold;
   margin-right: 30px;
 }
 
 .form {
-  width: 100%;
+  width: 70%;
   height: 100%;
   display: flex;
   margin-top: 3px;
@@ -41,4 +68,22 @@
   font-size: 1.5rem;
   height: 45px;
   flex-basis: 7%;
+}
+
+.defaultUser {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border-radius: 50%;
+  border: 1px solid #d4d0d0;
+  margin-left: auto;
+  cursor: pointer;
+}
+
+.defaultUser:hover {
+  background-color: #ffffff;
+  color: red;
 }
