--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-top: 0;
+  height: 100%;
 }
 
 code {
