--- a/src/components/video_detail/video_detail.module.css
+++ b/src/components/video_detail/video_detail.module.css
@@ -14,11 +14,6 @@
   height: 720px;
 }
 
-.player iframe {
-  width: 100%;
-  height: 100%;
-}
-
 /* Information */
 
 .description {
@@ -71,22 +66,26 @@
 }
 
 .container {
-  width: 460px;
-  margin-bottom: 4px;
-}
-
-.video:hover {
-  transform: scale(1.02);
+  margin-bottom: 1px;
+  margin-top: -5px;
 }
 
 .video {
+  width: 460px;
   display: flex;
-  align-items: center;
-  border: 1px solid lightgray;
-  box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.6);
+  align-items: flex-start;
   padding: 5px;
   cursor: pointer;
   transition: transform 250ms ease-in;
+}
+
+.video img {
+  height: 100px;
+}
+
+.video:hover {
+  background-color: rgba(245, 246, 250);
+  opacity: 0.7;
 }
 
 .thumbanils {
@@ -97,11 +96,50 @@
   margin-left: 0.3em;
 }
 
-.title,
-.channel {
+.title {
+  font-weight: bold;
   margin: 0;
+  flex-wrap: wrap;
 }
 
 .channel {
   font-size: 0.9rem;
+  color: gray;
+  margin: 0;
+}
+.count {
+  font-size: 14px;
+  color: gray;
+}
+
+@media screen and (max-width: 1024px) {
+  .detail {
+    flex-direction: column;
+  }
+  .player {
+    width: 834px;
+    height: 469px;
+  }
+  .description {
+    width: 834px;
+    height: 300px;
+  }
+  .likeUnlike {
+    width: 30%;
+  }
+  .videoList {
+    padding-left: 0;
+    width: 100%;
+  }
+  .container {
+    width: 834px;
+  }
+  .video {
+    width: 100%;
+  }
+
+  .video img {
+    width: 320px;
+    height: 200px;
+  }
 }
