--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -4,15 +4,13 @@
 }
 
 .video:hover {
-  transform: scale(1.02);
+  background-color: rgba(245, 246, 250);
+  opacity: 0.7;
 }
 
 .video {
   display: flex;
-  align-items: center;
-  border: 1px solid lightgray;
-  border-radius: 10px;
-  box-shadow: 3px 3px 5px 0px rgba(191, 191, 191, 0.6);
+  align-items: flex-start;
   padding: 5px;
   cursor: pointer;
   transition: transform 250ms ease-in;
@@ -26,11 +24,19 @@
   margin-left: 0.3em;
 }
 
-.title,
-.channel {
+.title {
+  font-weight: bold;
   margin: 0;
+  flex-wrap: wrap;
 }
 
 .channel {
   font-size: 0.9rem;
+  color: gray;
+  margin: 0;
+}
+
+.count {
+  font-size: 14px;
+  color: gray;
 }
