--- a/src/components/video_detail/video_detail.module.css
+++ b/src/components/video_detail/video_detail.module.css
@@ -112,17 +112,17 @@
   color: gray;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 1200px) and (max-width: 1350px) {
   .detail {
     flex-direction: column;
   }
   .player {
-    width: 834px;
-    height: 469px;
+    width: 1300px;
+    height: 725px;
   }
   .description {
-    width: 834px;
-    height: 300px;
+    width: 1290px;
+    height: 250px;
   }
   .likeUnlike {
     width: 30%;
@@ -132,14 +132,89 @@
     width: 100%;
   }
   .container {
-    width: 834px;
+    width: 1300px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+
+  .video {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    padding: 5px;
+    cursor: pointer;
+    transition: transform 250ms ease-in;
+  }
+
+  .video img {
+    width: 450px;
+    height: 280px;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 1200px) {
+  .detail {
+    flex-direction: column;
+    max-width: 1000px;
+    margin-top: 55px;
+  }
+  .player {
+    width: 1000px;
+    height: 725px;
+  }
+  .description {
+    width: 1000px;
+    height: 250px;
   }
   .video {
     width: 100%;
   }
-
   .video img {
-    width: 320px;
-    height: 200px;
+    width: 450px;
+    height: 280px;
+  }
+
+  .container {
+    width: 1000px;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .detail {
+    flex-direction: column;
+    max-width: 600px;
+    margin-top: 55px;
+  }
+  .videoList {
+    padding-left: 0;
+  }
+  .player {
+    width: 470px;
+    height: 265px;
+  }
+  .description {
+    width: 470px;
+    height: 250px;
+    font-size: 13px;
+  }
+  .likeUnlike {
+    width: 50%;
+  }
+  .video {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .video img {
+    width: 450px;
+    height: 280px;
+  }
+
+  .container {
+    width: 450px;
+    flex-grow: 1;
+    margin-bottom: 10px;
   }
 }
