--- a/src/components/video_search/video_search.module.css
+++ b/src/components/video_search/video_search.module.css
@@ -87,3 +87,59 @@ header {
   background-color: #ffffff;
   color: red;
 }
+
+@media screen and (min-width: 600px) and (max-width: 1200px) {
+  .navbar {
+    padding: 10px;
+  }
+  .hamburger {
+    display: none;
+  }
+  .logo {
+    font-size: 2rem;
+  }
+  .navbar span {
+    font-size: 1rem;
+  }
+  .form {
+    width: 75%;
+  }
+  .form button,
+  .form input {
+    font-size: 1rem;
+    height: 30px;
+  }
+  .defaultUser {
+    width: 35px;
+    height: 35px;
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar {
+    padding: 10px;
+  }
+  .hamburger {
+    display: none;
+  }
+  .logo {
+    font-size: 2rem;
+  }
+  .navbar span {
+    font-size: 1rem;
+  }
+  .form {
+    width: 55%;
+  }
+  .form button,
+  .form input {
+    font-size: 1rem;
+    height: 30px;
+  }
+  .defaultUser {
+    width: 35px;
+    height: 35px;
+    font-size: 1.3rem;
+  }
+}
