--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
   height: 100%;
 }
 
