--- a/src/components/video_item/video_item.module.css
+++ b/src/components/video_item/video_item.module.css
@@ -47,10 +47,11 @@
 
 @media screen and (min-width: 2300px) {
   .container {
-    width: 420px;
+    width: 500px;
+    margin: auto;
   }
   .video {
-    width: 420px;
+    width: 500px;
   }
 }
 
